--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /.idea/
 /src/test/support/smr_world/testworld.sqlite3
 /src/test/support/collections/
+/src/test/support/smr_world/smr_world_for_tests.sqlite3
+/user_files/smrworld.sqlite3
+/user_files/smrworld.sqlite3-journal
+/user_files/status.json
+/user_files/1579442668731.rdf
