--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /src/test/support/collections/empty_smr_col_function/
 /src/test/support/collections/empty_smr_col_session/
 /src/test/support/smr_world/smr_world_for_tests.sqlite3
+/src/test/support/smr_world/empty_smr_world.sqlite3
 /user_files/smrworld.sqlite3
 /user_files/smrworld.sqlite3-journal
 /user_files/status.json
