--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /user_files/smrworld.sqlite3-journal
 /user_files/status.json
 /user_files/1579442668731.rdf
+/src/test/support/collections/real_collection_version_0.0.1/collection.anki2
