Adjust open() to new database architecture and improve test

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /user_files/1579442668731.rdf
 /tests/support/collections/real_collection_version_0.0.1/collection.anki2
 /resources/example map - Copy.zip
+/tests/support/smr_world/smr_world_4_tests.sqlite3
