--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@
 /tests/support/smr_world/smr_world_for_tests.sqlite3
 /tests/support/smr_world/empty_smr_world.sqlite3
 /tests/support/smr_world/smr_world_with_example_map.sqlite3
+/tests/support/smr_world/smr_world_4_tests.sqlite3
+/tests/.pytest_cache/
+/tests/UI tests/.pytest_cache/
 /user_files/smrworld.sqlite3
 /user_files/smrworld.sqlite3-journal
 /user_files/status.json
 /user_files/1579442668731.rdf
 /tests/support/collections/real_collection_version_0.0.1/collection.anki2
 /resources/example map - Copy.zip
-/tests/support/smr_world/smr_world_4_tests.sqlite3
