Update node content setting methods and add tests

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /.idea/
 /tests/support/collections/empty_smr_col_function/
 /tests/support/collections/empty_smr_col_session/
+/tests/support/collections/changed_col_with_example_map/
 /tests/support/smr_world/smr_world_for_tests.sqlite3
 /tests/support/smr_world/empty_smr_world.sqlite3
 /tests/support/smr_world/smr_world_with_example_map.sqlite3
