Improve test resources structure

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@
 /user_files/1579442668731.rdf
 /tests/support/collections/real_collection_version_0.0.1/collection.anki2
 /resources/example map - Copy.zip
+/tests/support/collections/with_example_map/default/
+/tests/support/collections/with_example_map/changed/temporary/
+/tests/support/collections/empty/
+/tests/support/collections/with_example_map/changed/default/collection.media/
+/tests/support/collections/with_example_map/changed/default/collection.anki2
