Add test for warning after removing a center node in anki

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,22 @@
-
 /desktop.ini
 /.idea/
-/tests/support/collections/default_collection_with_example_map/
-/tests/support/collections/default_changed_collection_with_example_map/collection.media/
-/tests/support/collections/default_changed_collection_with_example_map/collection.anki2
-/tests/support/collections/temporary_empty_smr_col_function/
-/tests/support/collections/temporary_empty_smr_col_session/
-/tests/support/collections/temporary_changed_collection_with_example_map/
-/tests/support/collections/default_new_answer_collection_with_example_map/
-/tests/support/collections/temporary_new_answer_collection_with_example_map/
+/tests/support/collections/empty/
+/tests/support/collections/version_0.0.1/real/
+/tests/support/collections/with_example_map/changed/default/collection.media/
+/tests/support/collections/with_example_map/changed/default/collection.anki2
+/tests/support/collections/with_example_map/changed/temporary/
+/tests/support/collections/with_example_map/new_answer/default/collection.media/
+/tests/support/collections/with_example_map/new_answer/default/collection.anki2
+/tests/support/collections/with_example_map/new_answer/temporary/
+/tests/support/collections/with_example_map/removed_center_node/default/collection.media/
+/tests/support/collections/with_example_map/removed_center_node/default/collection.anki2
+/tests/support/collections/with_example_map/removed_center_node/temporary/
 /tests/support/smr_world/smr_world_for_tests.sqlite3
 /tests/support/smr_world/empty_smr_world.sqlite3
 /tests/support/smr_world/smr_world_with_example_map.sqlite3
 /tests/support/smr_world/smr_world_with_example_map.sqlite3-journal
 /tests/support/smr_world/smr_world_4_tests.sqlite3
-/tests/support/maps/
 /tests/.pytest_cache/
 /tests/UI tests/.pytest_cache/
 /user_files/smrworld.sqlite3
 /user_files/smrworld.sqlite3-journal
-/user_files/status.json
-/user_files/1579442668731.rdf
-/tests/support/collections/real_collection_version_0.0.1/collection.anki2
-/resources/example map - Copy.zip
-/tests/support/collections/with_example_map/default/
-/tests/support/collections/with_example_map/changed/temporary/
-/tests/support/collections/empty/
-/tests/support/collections/with_example_map/changed/default/collection.media/
-/tests/support/collections/with_example_map/changed/default/collection.anki2
