Add test case for added media in remote synchronization
- for both questions and answers

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /tests/support/smr_world/smr_world_4_tests.sqlite3
 /tests/support/maps/no_changes/
 /tests/support/maps/temporary/
+/tests/support/maps/changes/环境很好。.mp3
 /tests/support/maps/content.xml
 /tests/.pytest_cache/
 /tests/UI tests/.pytest_cache/
