Add storids to smr world again

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /user_files/smrworld.sqlite3-journal
 /tests/support/maps/xml/example_map/content.xml
 /tests/support/maps/xml/general_psychology/content.xml
+/tests/support/collections/with_example_map/default/
