Implement triggers for disconnecting nodes in ontology

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /tests/support/maps/xml/example_map/content.xml
 /tests/support/maps/xml/general_psychology/content.xml
 /tests/support/collections/with_example_map/default/
+/owlready2/
